// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch snapshot defaultChecked 1`] = `
<span
  class="zs-switch"
>
  <input
    checked=""
    class="zs-switch__input"
    type="checkbox"
    value="on"
  />
</span>
`;

exports[`Switch snapshot renders correctly 1`] = `
<span
  class="zs-switch"
>
  <input
    class="zs-switch__input"
    type="checkbox"
    value="off"
  />
</span>
`;
